# lot

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  lot_project_assistant.nu  lot_shell.nu
.github/workflows/: ci.yml
docs/: AUDIT.md  AUDIT_FINDINGS.md  CHANGE_REQUEST_FOR_EPIC.md  DENY_PATHS_FEATURE_REQUEST.md  DESIGN.md  DESIGN_SPAWN_TRAVERSE_ACES.md  DESIGN_WORKSPACE_CLI.md  DOCS_SPEC.md  FEATURE_REQUEST_SPAWN_TRAVERSE_ACES.md  FR-001-macos-descendant-kill.md  FR-002-explicit-kill-and-cleanup.md  FR-003-policy-builder.md  FR-004-forward-common-env.md  FR-005-async-wait-with-timeout.md  ISSUES.md  LINUX_NAMESPACE_FAILURES.md  LINUX_PARALLEL_SPAWN_ETXTBSY.md  NUL_DEVICE_ACCESS.md  PLAN.md  SECCOMP_IOCTL_BUG.md  SPEC.md  STATUS.md  WIN32_APP_ISOLATION.md  parallel-tests.md  spec_remove_resource_limits.md
lot/: Cargo.toml
lot-cli/: Cargo.toml
lot-cli/src/: config.rs  main.rs
lot/examples/: basic.rs  deny_paths.rs  resource_limits.rs
lot/src/: command.rs  env_check.rs  error.rs  lib.rs  path_util.rs  policy.rs  policy_builder.rs  unix.rs
lot/src/linux/: cgroup.rs  mod.rs  namespace.rs  seccomp.rs
lot/src/macos/: mod.rs  seatbelt.rs
lot/src/windows/: acl_helpers.rs  appcontainer.rs  cmdline.rs  elevation.rs  job.rs  mod.rs  nul_device.rs  pipe.rs  prerequisites.rs  sddl.rs  sentinel.rs  traverse_acl.rs
lot/tests/: integration.rs
lot/tests/common/: mod.rs
prompts/: project_assistant.md
src/: command.rs  error.rs  lib.rs  policy.rs  policy_builder.rs  unix.rs
src/linux/: cgroup.rs  mod.rs  namespace.rs  seccomp.rs
src/macos/: mod.rs  seatbelt.rs
src/windows/: appcontainer.rs  job.rs  mod.rs  nul_device.rs
tests/: integration.rs
