[package]
name = "lot"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Cross-platform process sandboxing: seccomp, AppContainer, Seatbelt"

[dependencies]
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
seccompiler = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Isolation",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[features]
tokio = ["dep:tokio"]
tracing = ["dep:tracing"]

[dependencies.tokio]
version = "1"
optional = true
features = ["rt", "time", "macros"]

[dependencies.tracing]
version = "0.1"
optional = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[lints.rust]
unsafe_code = "warn"
warnings = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
too_many_lines = "allow"
type_complexity = "allow"
doc_markdown = "allow"
tuple_array_conversions = "allow"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
dbg_macro = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true
