[workspace]
members = ["lot", "lot-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "warn"
warnings = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
too_many_lines = "allow"
type_complexity = "allow"
doc_markdown = "allow"
tuple_array_conversions = "allow"
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
dbg_macro = "deny"

[profile.release]
lto = true
codegen-units = 1
strip = true
